[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Bridge.gd" type="Script" id=1]
[ext_resource path="res://assets/Items/long_bridge.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70.8774, 11.4197 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 173.157 )

[node name="Bridge" type="Node2D"]
scale = Vector2( 1.07, 1 )
script = ExtResource( 1 )

[node name="Bridge1" type="StaticBody2D" parent="."]
position = Vector2( 283.45, 47.9374 )

[node name="Sprite" type="Sprite" parent="Bridge1"]
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge1"]
position = Vector2( 70.461, 8 )
shape = SubResource( 1 )

[node name="Bridge_Right" type="StaticBody2D" parent="."]
position = Vector2( 424.541, 47.9374 )

[node name="Sprite" type="Sprite" parent="Bridge_Right"]
position = Vector2( 140.092, -0.749146 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -140, -50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge_Right"]
position = Vector2( 70.461, 8 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 424.085, -126.848 )
shape = SubResource( 2 )

[node name="BreakTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="BreakTimer" to="." method="_on_BreakTimer_timeout"]
